<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">ListenTGT</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="enable_p2p_button">P2P On/Off</string>
        <string name="discover_peers_button">Discover</string>
        <string name="create_group_button">Broadcast</string>
        <string name="connect_peer_button">Connect</string>
        <string name="disconnect_peer_button">Disconnect</string>
        <string name="get_file_button">Launch Gallery</string>
        <string name="empty"></string>
        <string name="yes">yes</string>
        <string name="no">no</string>
        <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
        <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
        <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
        <string name="group_owner_text">"Am I the Group Owner? "</string>
        <string name="label_me">ME</string>
        <string name="label_peers">PEERS</string>

</resources>
